:bug: Fix view only alignment

--- a/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
@@ -38,6 +38,7 @@
   @include titleTipography;
   height: $s-20;
   padding: $s-4 $s-6;
+  margin-right: $s-12;
   border: $s-1 solid var(--tag-background-color);
   border-radius: $br-6;
   color: var(--tag-background-color);
